[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://GameObjects/Bullet/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Sound/SFX/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://GameObjects/Particles/HitParticle.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 12.7535

[node name="Bullet" type="Node2D"]
show_behind_parent = true
script = ExtResource( 2 )
sfx_audio_source = NodePath("SFX")

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="SelfDestroyDelay" type="Timer" parent="."]

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="HitParticle" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="SelfDestroyDelay" to="." method="_on_Timer_timeout"]
